--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/school?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=hbstudent
+spring.datasource.password=hbstudent
 
 #flyway
 spring.flyway.locations=classpath:db/migration
